Complain page white space bug left

--- a/css/css.css
+++ b/css/css.css
@@ -71,6 +71,16 @@
     background-color: rgb(84,120,219);
 }
 
-#kaas {
-    overflow-y:scroll;
+body {
+    overflow-y: scroll;
+    height: 100%;
 }
+
+.clearfix::after {
+    content: "";
+    display: block;
+    height: 0;
+    clear: both;
+    visibility: hidden;
+}
+
